# CS377-Final-Project

./: .gitignore  CMakeLists.txt  README.md  failure_detection  failure_detection_tests  failure_detection_tests[1]_include.cmake  failure_detection_tests[1]_tests.cmake  requirements.txt
include/: gossip_node.hpp  heartbeat_node.hpp  network.hpp  node.hpp  simulator.hpp
src/: gossip_node.cpp  heartbeat_node.cpp  main.cpp  network.cpp  node.cpp  simulator.cpp
tests/: test_main.cpp
